# rollZZ

./: .gitignore  .gitmodules  CMakeLists.txt  TODONETWORK.md  main.cpp  mainmenu.cpp  mainmenu.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  ressource.qrc
doc/uml/: classes.uml  cs.uml
lib/: build-mongo.sh
ressources/: mainwindow.ui
ressources/tiles/: wall
src/CS/: attacks.cpp  attacks.h  basicstat.cpp  basicstat.h  bonusstat.cpp  bonusstat.h  caracteristic.cpp  caracteristic.h  component.cpp  component.h  componentconvertor.h  cs.cpp  cs.h  descriptor.cpp  descriptor.h  descriptortypes.h  dice.cpp  dice.h  equipment.cpp  equipment.h  item.cpp  item.h  liststat.cpp  liststat.h  part.cpp  part.h  qtconvertor.h  section.cpp  section.h  weapon.cpp  weapon.h
src/app/: config.cpp  config.h  init.cpp  init.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindowui.cpp  mainwindowui.h
src/app/mongodb/: Stringifiable.hpp  Stringifier.hpp  Stringify.hpp  mongodb.cpp  mongodb.hpp
src/app/widgets/: cscreator.cpp  cscreator.h  gamelist.cpp  gamelist.h  mongodb.hpp  statcreationpopup.h
src/app/widgets/cscreator/: cscreator.cpp  cscreator.h  cscreatorsection.cpp  cscreatorsection.h
src/app/widgets/cscreator/components/: attacks.cpp  attacks.h  basicstat.cpp  basicstat.h  bonusstat.cpp  bonusstat.h  component.cpp  component.h  descriptor.cpp  descriptor.h  equipment.cpp  equipment.h  liststat.cpp  liststat.h  part.cpp  part.h  section.cpp  section.h
src/app/widgets/cscreator/popup/: attackspopup.cpp  attackspopup.h  basicstatpopup.cpp  basicstatpopup.h  bonusstatpopup.cpp  bonusstatpopup.h  categorycreationpopup.cpp  categorycreationpopup.h  cscreatorpopup.cpp  cscreatorpopup.h  descriptorcreationpopup.cpp  descriptorpopup.cpp  descriptorpopup.h  diceedit.cpp  diceedit.h  equipmentpopup.cpp  equipmentpopup.h  fileselectorpopup.h  liststatpopup.cpp  liststatpopup.h  newtabpopup.cpp  newtabpopup.h  sectionpopup.cpp  sectionpopup.h  statcreationpopup.cpp  tabpopup.cpp  tabpopup.h
src/app/widgets/cseditor/: cseditor.cpp  cseditor.h
src/app/widgets/cseditor/components/: attacks.cpp  attacks.h  basicstat.cpp  basicstat.h  bonusstat.cpp  bonusstat.h  caracteristic.cpp  caracteristic.h  component.cpp  component.h  descriptor.cpp  descriptor.h  equipment.cpp  equipment.h  item.cpp  item.h  liststat.cpp  liststat.h  section.cpp  section.h  weapon.cpp  weapon.h
src/app/widgets/game/: gamepopup.cpp  gamepopup.h  joingamepopup.cpp  joingamepopup.h
src/app/widgets/gamecs/: gamecs.cpp  gamecs.h
src/app/widgets/gamecs/components/: attacks.cpp  attacks.h  basicstat.cpp  basicstat.h  bonusstat.cpp  bonusstat.h  caracteristic.cpp  caracteristic.h  component.cpp  component.h  descriptor.cpp  descriptor.h  equipment.cpp  equipment.h  item.cpp  item.h  liststat.cpp  liststat.h  section.cpp  section.h  weapon.cpp  weapon.h
src/app/widgets/map/: chat.cpp  chat.h  handle.cpp  handle.h  layerselection.cpp  layerselection.h  mapelementwidget.cpp  mapelementwidget.h  mapgraphicsitem.cpp  mapgraphicsitem.h  mapgraphicsscene.cpp  mapgraphicsscene.h  mapgraphicsview.cpp  mapgraphicsview.h  mapplayertoken.cpp  mapplayertoken.h  mapscrollarea.cpp  mapscrollarea.h  mapwidget.cpp  mapwidget.h
src/app/widgets/popup/: createcharacterpopup.h  cscreatorpopup.cpp  cscreatorpopup.h  descriptorcreationpopup.h  equipmentcreationpopup.cpp  equipmentcreationpopup.h  statcreationpopup.cpp  statcreationpopup.h
src/app/widgets/tools/: component.cpp  component.h  listelement.cpp  listelement.h  popup.cpp  popup.h
src/game/: game.cpp  game.h  name.h  user.h
src/map/: componentconvertor.h  game.cpp  game.h  map.cpp  map.h  mapelement.cpp  mapelement.h  qtconvertor.h
src/network/: User.cpp  User.h  connection.cpp  connection.h  peermanager.cpp  peermanager.h  server.cpp  server.h
src/tools/: qtconvertor.h
src/tools/widgets/: diceedit.cpp  diceedit.h
